--- a/package.json
+++ b/package.json
@@ -2,14 +2,37 @@
   "name": "japan-proxy",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "linter": "ESLINT_USE_FLAT_CONFIG=true eslint --config eslint.config.mjs --cache --cache-location node_modules/.cache/eslint/.eslintcache --max-warnings 0",
+    "lint": "yarn linter .",
+    "lint:fix": "yarn linter --fix .",
+    "formatter": "prettier --cache --ignore-unknown",
+    "format": "yarn formatter --check src/",
+    "format:fix": "yarn formatter --write src/",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "globals": "^13.20.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "@eslint/js": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.25.2",
+    "husky": "^6.0.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "2.8.8",
+    "typescript": "~5.0.4",
     "vite": "^4.3.9"
   }
 }
