--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "globals": "^13.20.0",
+    "koa": "^2.14.2",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@eslint/js": "^8.43.0",
+    "@types/koa": "^2.13.6",
+    "@types/koa-json": "^2.0.20",
+    "@types/koa-logger": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.2.0",
@@ -33,6 +40,7 @@
     "lint-staged": "^13.2.2",
     "prettier": "2.8.8",
     "typescript": "~5.0.4",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-node": "^3.0.2"
   }
 }
