--- a/package.json
+++ b/package.json
@@ -3,32 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
     "linter": "ESLINT_USE_FLAT_CONFIG=true eslint --config eslint.config.mjs --cache --cache-location node_modules/.cache/eslint/.eslintcache --max-warnings 0",
     "lint": "yarn linter .",
     "lint:fix": "yarn linter --fix .",
     "formatter": "prettier --cache --ignore-unknown",
-    "format": "yarn formatter --check src/",
-    "format:fix": "yarn formatter --write src/",
+    "format": "yarn formatter --check api/",
+    "format:fix": "yarn formatter --write api/",
     "prepare": "husky install"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "globals": "^13.20.0",
-    "koa": "^2.14.2",
-    "koa-json": "^2.0.2",
-    "koa-logger": "^3.2.1",
-    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
     "@commitlint/config-conventional": "^17.6.5",
     "@eslint/js": "^8.43.0",
-    "@types/koa": "^2.13.6",
-    "@types/koa-json": "^2.0.20",
-    "@types/koa-logger": "^3.1.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.2.0",
@@ -36,11 +22,12 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.25.2",
+    "globals": "^13.20.0",
     "husky": "^6.0.0",
     "lint-staged": "^13.2.2",
+    "lodash": "^4.17.21",
     "prettier": "2.8.8",
     "typescript": "~5.0.4",
-    "vite": "^4.3.9",
-    "vite-plugin-node": "^3.0.2"
+    "vercel": "^30.2.3"
   }
 }
